# wch-desktop

./: CMakeLists.txt  test.qrc
src/: CMakeLists.txt
src/app/: main.cpp
src/core/domain/: user.h
src/core/ports/: authservice.h
src/core/usecases/: loginusecase.cpp  loginusecase.h
src/infrastructure/network/: qtauthservice.cpp  qtauthservice.h
src/presentation/auth/: logindialog.cpp  logindialog.h  logindialog.ui
src/presentation/chat/: chatdelegate.cpp  chatdelegate.h  chatlistmodel.cpp  chatlistmodel.h
src/presentation/main/: mainwindow.cpp  mainwindow.h  mainwindow.ui
src/presentation/sidebar/: sidebarwidget.cpp  sidebarwidget.h  sidebarwidget.ui
